# diploma

./: .gitignore  README.MD  SETUP.MD  architecutre.txt  config_cut.yaml  doc.yaml  pyproject.toml  run.py
apputils/: io.py
configs/: base.yaml  materials.yaml
core/: losses.py  material.py  model.py  pde.py  sampler.py  scenario.py  scenarion.py  train.py
runs/demo/20260218-235929/: config.resolved.yaml  meta.json
runs/demo/20260219-000110/: config.resolved.yaml  meta.json
runs/demo/20260219-001049/: config.resolved.yaml  meta.json
runs/demo/20260219-004646/: checkpoint_0000100.pt  config.resolved.yaml  meta.json
runs/demo/20260219-010001/: checkpoint_0000500.pt  config.resolved.yaml  meta.json
scripts/: check_materials.py  check_physics.py  check_sampling_model.py  eval_direction.py
src/pinn_te/: cli.py
src/pinn_te.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pinn_te/eval/: direction.py
src/pinn_te/losses/: pinn_loss.py
src/pinn_te/materials/: database.py  derive_params.py  layers.py
src/pinn_te/models/: mlp.py
src/pinn_te/physics/: kinematics.py  residuals.py  source.py  thermoelastic_iso.py
src/pinn_te/sampling/: collocation.py  sensors.py
src/pinn_te/train/: trainer.py
src/pinn_te/utils/: seeding.py
